[content] first pass complete & admin edits

--- a/actualites/index.html
+++ b/actualites/index.html
@@ -60,20 +60,26 @@
       </div>
     </header>
 
-    <div id="hero" class="hero hero-top" style="background-image: url(/assets/img/residences-artistiques-normandie/cour-chapelle-vue-aerienne.jpg)" >
-          <h1 class="long-h1">Admin</h1>
+    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg3.jpg)" >
+      <div>
+        <img src="/transtopie/assets/img/logo.png"/>
+          <h1>Actualités</h1>
+      </div>
     </div>
-    <section class="content">
+    <div id="feed"></div>
+
+
+    <script id="post-template" type="text/x-custom-template">
+    <section class="content bloc-img-left ghcms-news">
       <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src=""></div>
         <div class="bloc-text">
-          <h2><strong>Authentification</strong></h2>
-            <input type="text" name="user" id="user" placeholder="Prénom..."/>
-            <input type="password" name="password" id="password" placeholder="password123..."/>
-            <button id="connexion">Connexion</button>
-            <button id="deconnexion">Deconnexion</button>
+          <h2></h2><h3></h3>
+          <div class="description"></div>
         </div>
       </div>
-    </section>    <footer id="footer">
+    </section>
+	</script>    <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
