--- a/creations/index.html
+++ b/creations/index.html
@@ -52,8 +52,8 @@
             <li ><a href="/transtopie/projets-action-culturelle/" title="">Action Culturelle</a></li>
             <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
             <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Actualités</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Contact</a></li>
+            <li><a href="/transtopie/actualites/" title="">Actualités</a></li>
+            <li><a href="#footer" title="">Contact</a></li>
             <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
         </div>
@@ -72,7 +72,7 @@
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
         <div class="bloc-text">
           <h2>La rue fait mauvais genre</h2><h3>conte audiovisuel</h3>
-          <div class="ghcms ghcms-presentation">
+          <div class="ghcms ghcms-ruemauvaisgenre">
             <p>Quel rapport entretient la femme à l'espace public la nuit ? La rue, de nuit, jongle entre ombre et lumière. La nuit porte en elle les paradoxes de la ville lumière, festive, permissive comme la crainte du sombre, de l'inconnu, du danger. </p>
             <p>
 
@@ -89,7 +89,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
         </div>
         <div class="bloc-text">
           <h2>L'espace public des femmes</h2><h3>lieu de tous  les dangers</h3>
-          <div class="ghcms ghcms-1">
+          <div class="ghcms ghcms-espacepublic">
             Ce spectacle invite particulièrement les femmes à se questionner sur leur rapport à l’espace public, souvent perçu comme le lieu de tous les dangers, en interrogeant les risques. Les femmes utilisent l’espace public, c’est-à-dire accessible à tous et gratuit, de manière différente  des hommes la nuit, par peur des incivilités et agressions mais également du fait d’un sentiment d’insécurité généré par les injonctions sociales auxquelles elles sont sujettes. À quel point ces perceptions d’insécurité sont-elles socialement construites ? Et comment pouvons-nous les renverser ?
             <a href="https://www.calameo.com/books/006058682b52dc5e5af2d" target="_blank">Docs Présentation La Rue Fait Mauvais Genre Transtopie</a>
           </div>
@@ -105,7 +105,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png" alt=""></div>
         <div class="bloc-text">
           <h2>Born to be Queer</h2><h3>conférence gesticulée</h3>
-          <div class="ghcms ghcms-2">
+          <div class="ghcms ghcms-b2bq">
             <iframe src="//v.calameo.com/?bkcode=0060586827ba0756ec020" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
           </div>
         </div>
@@ -117,7 +117,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/enfer-me-ment.png"></div>
         <div class="bloc-text">
           <h2>L'enfer me ment</h2><h3>performance sonore fictionnelle et live painting monumental</h3>
-          <div class="ghcms ghcms-1">
+          <div class="ghcms ghcms-enfermement">
          <iframe src="//v.calameo.com/?bkcode=0060586824bd93ee1517f&amp;mode=mini" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
           </div>
         </div>
@@ -132,7 +132,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/resonance-chatelets.jpg" alt=""></div>
         <div class="bloc-text">
           <h2>Résonances</h2><h3>création musicale sur-mesure</h3>
-          <div class="ghcms ghcms-2">
+          <div class="ghcms ghcms-resonance">
 
 
 Dans le cadre du projet DRAC et DRDJSCS C'est mon patrimoine visant à valoriser la mémoire du site patrimonial des Petits Châtelets, Transtopie a proposé une création sur-mesure sous forme de concert. 
@@ -150,7 +150,10 @@ Mehdi Meskini aux textes, Pierre Fourmeau à la composition musicale, et Clémen
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
-          <p><a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+          <p>
+            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+            <a title="Transtopie sur YouTube" target="_blank" href="
+            https://www.youtube.com/channel/UCP3q3TBqtL-80P4M-XJ6YiQ"><span class="sprite-icon youtube"></span></a>
           </p>
         </div>
         <div id="useful-links">
@@ -167,16 +170,7 @@ Mehdi Meskini aux textes, Pierre Fourmeau à la composition musicale, et Clémen
             </ul>
           </div>
         </div>
-        <div id="cookies-notice">
-          <p>Ce site n'utilise aucun cookie de navigation <a href="#cookies-notice" title="Afficher tous les cookies que l'on utilise et/ou n'utilise pas" onclick="document.querySelector('#cookies-notice a').style.visibility = 'hidden'">afficher la liste complète</a>
-          </p>
-          <button class="accept" title="ou pas" onclick="saveCookieNotice()">Tout accepter</button><button title="ou pas" class="refuse" onclick="saveCookieNotice()">Ne rien refuser</button>
-          <script type="text/javascript">
-            function updtCookiesNotice(){window.localStorage?localStorage.cookie?document.querySelector('#cookies-notice').style.display = 'none':0:0;}
-            function saveCookieNotice(){window.localStorage?localStorage.cookie?0:localStorage.cookie=true:0;updtCookiesNotice()}
-            updtCookiesNotice();
-          </script>
-        </div>
+
         <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p>
       </div>
     </footer>
