--- a/creations/la-rue-fait-mauvais-genre/index.html
+++ b/creations/la-rue-fait-mauvais-genre/index.html
@@ -52,8 +52,8 @@
             <li ><a href="/transtopie/projets-action-culturelle/" title="">Action Culturelle</a></li>
             <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
             <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Actualités</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Contact</a></li>
+            <li><a href="/transtopie/actualites/" title="">Actualités</a></li>
+            <li><a href="#footer" title="">Contact</a></li>
             <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
         </div>
@@ -145,7 +145,10 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
-          <p><a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+          <p>
+            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+            <a title="Transtopie sur YouTube" target="_blank" href="
+            https://www.youtube.com/channel/UCP3q3TBqtL-80P4M-XJ6YiQ"><span class="sprite-icon youtube"></span></a>
           </p>
         </div>
         <div id="useful-links">
@@ -162,16 +165,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
             </ul>
           </div>
         </div>
-        <div id="cookies-notice">
-          <p>Ce site n'utilise aucun cookie de navigation <a href="#cookies-notice" title="Afficher tous les cookies que l'on utilise et/ou n'utilise pas" onclick="document.querySelector('#cookies-notice a').style.visibility = 'hidden'">afficher la liste complète</a>
-          </p>
-          <button class="accept" title="ou pas" onclick="saveCookieNotice()">Tout accepter</button><button title="ou pas" class="refuse" onclick="saveCookieNotice()">Ne rien refuser</button>
-          <script type="text/javascript">
-            function updtCookiesNotice(){window.localStorage?localStorage.cookie?document.querySelector('#cookies-notice').style.display = 'none':0:0;}
-            function saveCookieNotice(){window.localStorage?localStorage.cookie?0:localStorage.cookie=true:0;updtCookiesNotice()}
-            updtCookiesNotice();
-          </script>
-        </div>
+
         <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p>
       </div>
     </footer>
