--- a/evenements/index.html
+++ b/evenements/index.html
@@ -52,8 +52,8 @@
             <li ><a href="/transtopie/projets-action-culturelle/" title="">Action Culturelle</a></li>
             <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
             <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Actualités</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Contact</a></li>
+            <li><a href="/transtopie/actualites/" title="">Actualités</a></li>
+            <li><a href="#footer" title="">Contact</a></li>
             <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
         </div>
@@ -73,7 +73,7 @@
         <div class="bloc-pic"><img loading="lazy" src=""></div>
         <div class="bloc-text">
           <h2>des événements sur-mesure</h2><h3> pour un lieu</h3>
-          <div class="ghcms ghcms-1">
+          <div class="ghcms ghcms-presentation">
              Des soirées spectacle, des scénographies sonores ou des parcours artistiques uniques et originaux sont pensés liés à un lieu, un thème ou un événement. 
 
 Les créations IN SITU sont réalisées dans des friches comme dans des espaces publics. Les possibilités sont multiples selon la commande et les besoins exprimés par les populations. 
@@ -98,7 +98,7 @@ Chaque événement est conçu dans l'échange avec les organisateurs et les habi
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/evenements/ladyfest.png" alt=""></div>
         <div class="bloc-text">
           <h2>LadyFest</h2><h3>audiovisuel</h3>
-          <div class="ghcms ghcms-presentation">
+          <div class="ghcms ghcms-ladyfest">
             <p>Ladyfest est un festival communautaire de spectacles vivants et d'arts pour les féministes et femmes artistes, à but non lucratif. Les différentes éditions de Ladyfest proposent généralement une programmation de groupes de musique, des performances d'artistes, des autrices, des lectures à voix haute, des artistes visuels, des films, des conférences, des expositions d'art et des ateliers. Cet événement est organisé par l'association Transtopie à Chapêlmêle.</p>
           </div>
         </div>
@@ -111,7 +111,7 @@ Chaque événement est conçu dans l'échange avec les organisateurs et les habi
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/evenements/de-visu.png" alt=""></div>
         <div class="bloc-text">
           <h2>Festival de Visu</h2><h3>créations in situ d'arts vivants visuels</h3>
-          <div class="ghcms ghcms-2">
+          <div class="ghcms ghcms-devisu">
             <p>DE VISU a mis en lien des artistes issus des arts vivants (danse, théâtre, cirque, musique, poésie...) et des arts visuels (vidéoprojection, dessin, peinture, cinéma, plasticien...) sur des temps de résidence relativement éphémères (deux semaines de création en amont du festival) dans l'optique d'une représentation lors du festival (3 jours). Chaque artiste est venu avec ses matières, ses envies, ses questionnements, pour les faire entrer en résonance au sein d'un groupe d'artistes inédit, sur un temps de création limité. Mêler la recherche, la rencontre et la notion de présentation devant un public, inciter à la création autour de la notion d'éphémère, de fragile, de sensible. L'écrin de ce laboratoire a été Chapêlmêle. Cet espace présente un patrimoine architectural fécond que la projection d'images doit pouvoir exploiter (voûtes, vitraux....). La dynamique que suscitent Chapêlmêle et l'ensemble des Petits Châtelets a généré des espaces de croisement et de rencontre avec le public usager et adhérent du lieu, en amont du festival. 
 
     interview: https://www.facebook.com/insituwebtv/videos/507496043485928/
@@ -127,7 +127,7 @@ Chaque événement est conçu dans l'échange avec les organisateurs et les habi
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/evenements/fete-du-feu.jpg"></div>
         <div class="bloc-text">
           <h2>La fête du feu</h2><h3>conseil citoyen</h3>
-          <div class="ghcms ghcms-1">
+          <div class="ghcms ghcms-fetedufeu">
             
 
 
@@ -158,7 +158,7 @@ Article: https://www.ouest-france.fr/normandie/alencon-61000/alencon-un-week-end
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/evenements/concert-en-cuisine.jpg" alt=""></div>
         <div class="bloc-text">
           <h2>Concerts</h2><h3>en cuisine</h3>
-          <div class="ghcms ghcms-presentation">
+          <div class="ghcms ghcms-concertscuisine">
           </div>
         </div>
       </div>
@@ -176,7 +176,7 @@ Article: https://www.ouest-france.fr/normandie/alencon-61000/alencon-un-week-end
         </div>
         <div class="bloc-text">
           <h2>Mauvaises Filles</h2><h3>une mémoire douloureuse des Petits-Châtelets</h3>
-          <div class="ghcms ghcms-presentation">
+          <div class="ghcms ghcms-mauvaisesfilles">
              Dans le but de rétablir une mémoire douloureuse sur le lieu des Petits-Châtelets, autrefois maison de correction pour femmes, nous avons organisé une soirée hommage assez particulière qui a mêlé histoire, patrimoine et art.
 
 Cette soirée a été dédiée aux « Mauvaises filles ». C’étaient ces rebelles, adolescentes fugueuses ou filles perdues que l’on enfermait et qui résidaient en un lieu tenu par des femmes d’église : Aux Petits-Châtelets. C’est dans ce site chargé d’histoire que la conférence théâtralisée tire de l’oubli pour un soir ces invisibles.
@@ -197,7 +197,7 @@ Le conférencier, David Niget mène un travail universitaire sur les sociétés 
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/evenements/bal-des-sorcieres.jpg" alt=""></div>
         <div class="bloc-text">
           <h2>Bal des Sorcières</h2><h3>lutte contre le patriarcat</h3>
-          <div class="ghcms ghcms-presentation">
+          <div class="ghcms ghcms-balsorcieres">
             Dans le cadre du festival "culture(s) étrange(s) de la Ville d'Alençon la figure monstrueuse de la sorcière a été appelée.
 
             Le bouc émissaire d'une époque, la sorcière, la guérisseuse, la marginale au nez crochu, en somme le pouvoir féminin mystérieux, sera mis à l'honneur vendredi 1er mars 2019 dans le but de transformer ce visage hideux en une figure héroïque, de femme libre et indépendante. Ce symbole subversif de la lutte contre le patriarcat est mis au gout du jour en appelant les participants a révéler la sorcière qui est en eux sous forme de grand bal costumé à La Halle Aux Toiles
@@ -216,7 +216,10 @@ Le conférencier, David Niget mène un travail universitaire sur les sociétés 
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
-          <p><a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+          <p>
+            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+            <a title="Transtopie sur YouTube" target="_blank" href="
+            https://www.youtube.com/channel/UCP3q3TBqtL-80P4M-XJ6YiQ"><span class="sprite-icon youtube"></span></a>
           </p>
         </div>
         <div id="useful-links">
@@ -233,16 +236,7 @@ Le conférencier, David Niget mène un travail universitaire sur les sociétés 
             </ul>
           </div>
         </div>
-        <div id="cookies-notice">
-          <p>Ce site n'utilise aucun cookie de navigation <a href="#cookies-notice" title="Afficher tous les cookies que l'on utilise et/ou n'utilise pas" onclick="document.querySelector('#cookies-notice a').style.visibility = 'hidden'">afficher la liste complète</a>
-          </p>
-          <button class="accept" title="ou pas" onclick="saveCookieNotice()">Tout accepter</button><button title="ou pas" class="refuse" onclick="saveCookieNotice()">Ne rien refuser</button>
-          <script type="text/javascript">
-            function updtCookiesNotice(){window.localStorage?localStorage.cookie?document.querySelector('#cookies-notice').style.display = 'none':0:0;}
-            function saveCookieNotice(){window.localStorage?localStorage.cookie?0:localStorage.cookie=true:0;updtCookiesNotice()}
-            updtCookiesNotice();
-          </script>
-        </div>
+
         <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p>
       </div>
     </footer>
