--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <li ><a href="/transtopie/projets-action-culturelle/" title="">Action Culturelle</a></li>
             <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
             <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Actualités</a></li>
-            <li><a href="/transtopie/qui-sommes-nous/" title="">Contact</a></li>
+            <li><a href="/transtopie/actualites/" title="">Actualités</a></li>
+            <li><a href="#footer" title="">Contact</a></li>
             <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
         </div>
@@ -74,7 +74,7 @@
         <div class="bloc-text">
           <h2>Créations & Spectacles</h2>
           <h3>association productrice de culture</h3>
-          <div class=" ghcms ghcms-presentation">
+          <div class=" ghcms ghcms-creas">
             <p>L’association TRANSTOPIE vise à la lutte contre les discriminations par des approches artistiques et culturelles en créant des spectacles, en concevant des programmes d’action culturelle en lien avec les acteurs du territoire ornais, et en faisant la promotion de l’art sous toutes ses formes.
 Les projets montés jusqu’à présent et qui vont se développer au sein de l’association s’inscrivent dans une logique d’intérêt général dans la droite lignée de politiques publiques, c’est-à-dire l’accès à la culture pour tous en développant des projets d’action culturelle à destination des publics éloignés, la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p><p>
 Le projet associatif de Transtopie rentre dans le cadre que l’on appelle également « l’économie sociale et solidaire des arts et de la culture ». Transtopie permet de renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesur</p>
@@ -100,7 +100,7 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
         <div class="bloc-text">
           <h2>Voyage en Hétérotopie</h2>
           <h3>programmes d’action culturelle</h3>
-          <div class=" ghcms ghcms-residences">
+          <div class=" ghcms ghcms-action">
             <p>Lutte contre les discriminations par des approches artistiques et culturelles</p>
             <p>Des projets qui s’inscrivent dans une logique d’intérêt général, d’accès à la culture pour tous,  à destination des publics éloignés</p><p>
             la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p>
@@ -112,14 +112,14 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
       <div class="placeholder"></div>
     </section>
 
-    <div class="hera"><div style="background-image: url(/transtopie/assets/img/malou.jpeg)" ></div></div>
+    <div class="hera"><div style="background-image: url(/transtopie/assets/img/bisou-masque.jpg)" ></div></div>
 
     <section class="content bloc-right">
       <div class="wrapper">
         <div class="bloc-text">
           <h2>Arts et Territoires</h2>
           <h3>rencontres, festivals, développement artistique local</h3>
-          <div class=" ghcms ghcms-residences">
+          <div class=" ghcms ghcms-rencontres">
             <p>Des soirées spectacle, des scénographies sonores ou des parcours artistiques uniques et originaux sont pensés liés à un lieu, un thème ou un événement. </p>
             <p>Chaque événement est conçu dans l'échange avec les organisateurs et les habitants, en offrant des propositions clé en main.</p>
             <p>Comme un panier d'Amap, le panier culturel est une sélection de spectacles, objets d'art et ateliers de pratique artistique pour se découvrir de nouvelles passions et profiter du meilleur des propositions artistiques locales d'Alençon et sa région. </p>
@@ -137,7 +137,10 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
-          <p><a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+          <p>
+            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+            <a title="Transtopie sur YouTube" target="_blank" href="
+            https://www.youtube.com/channel/UCP3q3TBqtL-80P4M-XJ6YiQ"><span class="sprite-icon youtube"></span></a>
           </p>
         </div>
         <div id="useful-links">
@@ -154,16 +157,7 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
             </ul>
           </div>
         </div>
-        <div id="cookies-notice">
-          <p>Ce site n'utilise aucun cookie de navigation <a href="#cookies-notice" title="Afficher tous les cookies que l'on utilise et/ou n'utilise pas" onclick="document.querySelector('#cookies-notice a').style.visibility = 'hidden'">afficher la liste complète</a>
-          </p>
-          <button class="accept" title="ou pas" onclick="saveCookieNotice()">Tout accepter</button><button title="ou pas" class="refuse" onclick="saveCookieNotice()">Ne rien refuser</button>
-          <script type="text/javascript">
-            function updtCookiesNotice(){window.localStorage?localStorage.cookie?document.querySelector('#cookies-notice').style.display = 'none':0:0;}
-            function saveCookieNotice(){window.localStorage?localStorage.cookie?0:localStorage.cookie=true:0;updtCookiesNotice()}
-            updtCookiesNotice();
-          </script>
-        </div>
+
         <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p>
       </div>
     </footer>
