--- a/panier-culture/index.html
+++ b/panier-culture/index.html
@@ -60,20 +60,73 @@
       </div>
     </header>
 
-    <div id="hero" class="hero hero-top" style="background-image: url(/assets/img/residences-artistiques-normandie/cour-chapelle-vue-aerienne.jpg)" >
-          <h1 class="long-h1">Admin</h1>
+    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
+      <div>
+        <img src="/transtopie/assets/img/logo.png"/>
+          <h1>Panier Culture</h1>
+      </div>
     </div>
-    <section class="content">
+
+    <section class="content bloc-img-right">
       <div class="wrapper">
+        <div class="bloc-vid">
+          <iframe src="//embedftv-a.akamaihd.net/15a0cec04e87951d148ce6654992e470" scrolling="no" allowfullscreen="allowfullscreen" width="560" height="315" frameborder="0"></iframe>
+        </div>
         <div class="bloc-text">
-          <h2><strong>Authentification</strong></h2>
-            <input type="text" name="user" id="user" placeholder="Prénom..."/>
-            <input type="password" name="password" id="password" placeholder="password123..."/>
-            <button id="connexion">Connexion</button>
-            <button id="deconnexion">Deconnexion</button>
+          <h2>Un panier culturel</h2><h3>Proximité, partage et développement artistique local</h3>
+          <div class="ghcms ghcms-presentation">
+            <p> Comme un panier d'Amap, le panier culturel est une sélection de spectacles, objets d'art et ateliers de pratique artistique pour se découvrir de nouvelles passions et profiter du meilleur des propositions artistiques locales d'Alençon et sa région.
+Pour le maintien d'une culture locale et d'alternatives en matière de création artistique</p>
+            <p> Après la crise sanitaire du coronavirus, nous choisissons de nous diriger vers un modèle de consommation plus locale en mettant en lumière les lieux du territoire et les artistes locaux. 
+
+En s'adaptant aux exigences de l'après confinement, nous proposons des formes de spectacles plus intimes, à jauge réduite. Nous invitons à devenir Consomm'Acteur de la culture par la pratique artistique. </p>
+<p>Acheter un panier est un acte d’implication du public dans le développement de la vie artistique et culturelle locale.
+</p>
+          </div>
         </div>
       </div>
-    </section>    <footer id="footer">
+    </section>
+
+    <section class="content bloc-img-left">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/panier-culture/presentation-2.png"></div>
+        <div class="bloc-text">
+          <h2>Contenu</h2><h3>infos pratiques</h3>
+          <div class="ghcms ghcms-contenu">
+            Qu'est ce qu'on peut trouver dans le  panier pour 15 € ?
+             – Toujours : 1 contenant illustré par un artiste local & 1 place de spectacle vivant (à jauge limitée) 
+- Souvent 1 ou plusieurs œuvres d'art (sérigraphie, collages, gravure) ou 1 production audiovisuelle (CD, films) ou encore 1 livre
+– Parfois 1 invitation à un atelier découverte de pratique artistique et 1 invitation à un vernissage
+– Et surtout le plaisir de participer à la soirée de remise des paniers chaque premier vendredi du mois de 17h à 19h  
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <div class="hera"><div style="background-image: url(/transtopie/assets/img/panier-culture/presentation.png)" ></div></div>
+
+    <section class="content bloc-right">
+      <div class="wrapper">
+        <div class="bloc-text">
+          <h2>Engagements</h2><h3>réservations</h3>
+          <div class="ghcms ghcms-engagements">
+            <p>Adhésion obligatoire à l'association
+Par leur adhésion à l’association, les membres s’engagent à :
+
+    Accepter et respecter le règlement intérieur
+    Donner une cotisation à l’association à prix libre par année civile
+    Passer commande pour au moins un panier dans l’année
+
+
+</p>
+<p>Vous voulez: réserver un panier ; participer en tant qu'artiste ; accueillir un événement chez vous</p>
+          </div>
+        </div>
+      </div>
+        <div class="placeholder"></div>
+    </section>
+    <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
